Ändrade så får vise om det funkar

--- a/L1-if-statements.ipynb
+++ b/L1-if-statements.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "age = int(input(\"Hur gmmal är du?\"))\n",
-    "\n",
-    "if age "
-   ]
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1115340136.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [9]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if age\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -43,11 +48,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jämt tal\n"
+     ]
+    }
+   ],
    "source": [
-    "number = 42 "
+    "number = 42 \n",
+    "\n",
+    "# 2 equal signs => checks if left is equal to right\n",
+    "if number % 2 == 0:\n",
+    "    print(\"jämt tal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3==4:False\n",
+      "3==3:True\n",
+      "3>=3:True\n",
+      "3!=3:False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (f\"3==4:{3 == 4}\")\n",
+    "print (f\"3==3:{3 == 3}\")\n",
+    "print (f\"3>=3:{3 >= 3}\")\n",
+    "print (f\"3!=3:{3 != 3}\")"
    ]
   }
  ],
