--- a/Code-alongs/L1-if-statements.ipynb
+++ b/Code-alongs/L1-if-statements.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## if-statements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## if-else"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -14,7 +28,15 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "age = int(input(\"Hur gammal är du?\"))\n",
+    "\n",
+    "if age < 18:\n",
+    "    print(f\"Du är {age} år gammal, gränsen är 18\")\n",
+    "    print(\"Du får inte gå in på puben\")\n",
+    "else:\n",
+    "    Print(\"Välkommen in\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -84,10 +106,98 @@
     }
    ],
    "source": [
-    "print (f\"3==4:{3 == 4}\")\n",
-    "print (f\"3==3:{3 == 3}\")\n",
-    "print (f\"3>=3:{3 >= 3}\")\n",
-    "print (f\"3!=3:{3 != 3}\")"
+    "print (f\"3==4:{3 == 4}\") # equal operator\n",
+    "print (f\"3==3:{3 == 3}\") # equal operator\n",
+    "print (f\"3>=3:{3 >= 3}\") # larger than or equal opertor\n",
+    "print (f\"3!=3:{3 != 3}\") # not equal operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## if - elif - else\n",
+    "\n",
+    "```py\n",
+    "if condition:\n",
+    "    statement_1\n",
+    "    ...\n",
+    "    statement_n\n",
+    "elif condition:\n",
+    "    statement_1\n",
+    "    ...\n",
+    "    statement_m\n",
+    "...\n",
+    "elif condition:\n",
+    "    ...\n",
+    "else\n",
+    "    statements\n",
+    "    ...\n",
+    "program continues ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight=30.0\n",
+      "Give patient 750mg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# weight is a sting here\n",
+    "weight = float(input(\"Enter patients weight (kg): \"))\n",
+    "print(f\"{weight=}\")\n",
+    "\n",
+    "# now we conwert it to a float\n",
+    "weight = float(weight)\n",
+    "\n",
+    "if weight < 20:\n",
+    "    print(\"Give patient 500mg\")\n",
+    "elif weight < 40:\n",
+    "    print(\"Give patient 750mg\")\n",
+    "else:\n",
+    "    print(\"Give patient 1000mg\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nestes if-statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 divisible by 5\n",
+      "even number\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 10\n",
+    "\n",
+    "if number % 5 == 0:\n",
+    "    print(f\"{number} divisible by 5\")\n",
+    "    if number % 2 == 0:\n",
+    "        print(\"even number\")\n",
+    "    else:\n",
+    "        print(\"odd number\")\n",
+    "else:\n",
+    "    print(\"Not divisible by 5\")"
    ]
   }
  ],
