did exercise b in pythagorean theorem

--- a/Exercises/00-Count-with-Python-exercise.ipynb
+++ b/Exercises/00-Count-with-Python-exercise.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Pythagorean theoerm"
+    "## 1. a Pythagorean theorem"
    ]
   },
   {
@@ -40,6 +40,65 @@
     "\n",
     "print (c)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. b Pythagorean theorem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.898979485566356\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "from re import X \n",
+    "\n",
+    "cathet1 = a\n",
+    "x = b\n",
+    "hypothenuse = c\n",
+    "\n",
+    "a = 5\n",
+    "b = X\n",
+    "c = 7\n",
+    "\n",
+    "b = math.sqrt(c**2 - a**2)\n",
+    "\n",
+    "print (b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Classification accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.898979485566356\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
