Wrote everything again, deleted by accident

--- a/Code-alongs/L2-while-statement.ipynb
+++ b/Code-alongs/L2-while-statement.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "birds, years = 80000, 0 #\n",
+    "birds, years = 80000, 0 # tuple unpacking\n",
     "\n",
     "limit = birds/10\n",
     "\n",
@@ -91,8 +91,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example - Milk\n",
-    "\n",
+    "## Example milk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1L of milk has 1 500 000 bacterias in room temperature\n",
     "\n",
     "Bacterias increases with 50% each hour in room temp\n",
@@ -104,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +127,7 @@
        "Text(0.5, 1.0, 'Bacterias in milk in room temperature')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,7 +143,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt \n",
     "\n",
     "bacterias = 1.5e6 # 1.5 * 10^6\n",
     "factor = 1.5\n",
@@ -157,15 +162,37 @@
     "print(bacterias_list)\n",
     "print(f\"Takes {hours}h for milk to get soured\")\n",
     "\n",
-    "# creates a range object with numbers: 0,1,2,..., hours\n",
+    "# creates a range object with numbers: 0,1,2,...,hours\n",
     "hours_list = range(0, hours+1)\n",
     "\n",
     "plt.plot(hours_list, bacterias_list, 'o-')\n",
-    "plt.plot(hours_list, [sour]*(hours+1))\n",
+    "\n",
+    "plt.plot(hours_list, [sour]*(hours+1)) \n",
+    "\n",
     "plt.grid()\n",
     "plt.xlabel(\"Hours\")\n",
     "plt.ylabel(\"Number of bacterias\")\n",
-    "plt.title(\"Bacterias in milk in room temperature\")\n"
+    "plt.title(\"Bacterias in milk in room temperature\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10000000.0, 10000000.0, 10000000.0, 10000000.0, 10000000.0, 10000000.0]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[sour]*(hours+1)"
    ]
   }
  ],
