--- a/Code-alongs/L1-if-statements.ipynb
+++ b/Code-alongs/L1-if-statements.ipynb
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1115340136.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [9]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if age\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Du är 14 år gammal, gränsen är 18\n",
+      "Du får inte gå in på puben\n"
      ]
     }
    ],
@@ -35,12 +35,12 @@
     "    print(f\"Du är {age} år gammal, gränsen är 18\")\n",
     "    print(\"Du får inte gå in på puben\")\n",
     "else:\n",
-    "    Print(\"Välkommen in\")"
+    "    print(\"Välkommen in\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,9 @@
     "age = 15\n",
     "height = 210\n",
     "\n",
+    "# other languages \n",
+    "# && for and \n",
+    "# || for or\n",
     "if age > 10 and 130 < height < 210:\n",
     "    print(\"Du får åka balder\")\n",
     "else:\n",
@@ -66,6 +69,17 @@
    "metadata": {},
    "source": [
     "## Modulo operator %"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gives the rest after an integer division\n",
+    "\n",
+    "5 % 3 = 2\n",
+    "\n",
+    "22 % 9 = 4"
    ]
   },
   {
@@ -138,25 +152,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weight=30.0\n",
-      "Give patient 750mg\n"
+      "weight='113.3'\n",
+      "weight=113.3\n",
+      "Give patient 1000mg\n"
      ]
     }
    ],
    "source": [
     "# weight is a sting here\n",
-    "weight = float(input(\"Enter patients weight (kg): \"))\n",
+    "weight = (input(\"Enter patients weight (kg): \"))\n",
     "print(f\"{weight=}\")\n",
     "\n",
     "# now we conwert it to a float\n",
     "weight = float(weight)\n",
+    "print(f\"{weight=}\")\n",
     "\n",
     "if weight < 20:\n",
     "    print(\"Give patient 500mg\")\n",
@@ -175,20 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 divisible by 5\n",
-      "even number\n"
+      "Not divisible by 5\n"
      ]
     }
    ],
    "source": [
-    "number = 10\n",
+    "number = 12\n",
     "\n",
     "if number % 5 == 0:\n",
     "    print(f\"{number} divisible by 5\")\n",
