for statement code along

--- a/Code-alongs/L3-for-statement.ipynb
+++ b/Code-alongs/L3-for-statement.ipynb
@@ -203,6 +203,44 @@
     "print(\"supermycket pasta\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nested loops\n",
+    "\n",
+    "- a loop in a loop\n",
+    "\n",
+    "(1,1)(1,2)(1,3)\n",
+    "\n",
+    "(2,1)(2,2)(2,3)\n",
+    "\n",
+    "(2,1)(2,2)(2,3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1)(1, 2)(1, 3)\n",
+      "(2, 1)(2, 2)(2, 3)\n",
+      "(3, 1)(3, 2)(3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for row in range(1,4):\n",
+    "    for col in range(1,4):\n",
+    "        print(f\"({row}, {col})\", end=\"\")\n",
+    "    print() # newline"
+   ]
   }
  ],
  "metadata": {
