--- a/Exercises/01-if-statement-exercise.ipynb
+++ b/Exercises/01-if-statement-exercise.ipynb
@@ -10,7 +10,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('Python-Filip-Jonsson-QrgXjHvV')",
    "language": "python",
    "name": "python3"
   },
@@ -21,7 +21,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3b159cfb29be9d6562cbbb625516b1508de6894b2216cc7812ffbc8c73a2987f"
+    "hash": "bf7a075d4e88d89235e152b5ba40ae2bd384c6fbf9c5ccafacee2ba85599004a"
    }
   }
  },
