Wrote functions in code along

--- a/Code-alongs/L5-Strings.ipynb
+++ b/Code-alongs/L5-Strings.ipynb
@@ -228,7 +228,9 @@
     "fick schackmatt med hjälp av schoolmatt\"\n",
     "\n",
     "match = re.findall(r\".att\", text)\n",
-    "print(match)"
+    "print(match)\n",
+    "\n",
+    "# try to extract the whole words that contains with \"att\""
    ]
   }
  ],
