--- a/Exercises/00-Count-with-Python-exercise.ipynb
+++ b/Exercises/00-Count-with-Python-exercise.ipynb
@@ -87,23 +87,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.898979485566356\n"
+      "0.821917808219178\n"
      ]
     }
    ],
+   "source": [
+    "def my_function():\n",
+    "    print(300/365)  \n",
+    "\n",
+    "my_function() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Classification accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.987\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "TP = 2 \n",
+    "FP = 2\n",
+    "FN = 11\n",
+    "TN = 985\n",
+    "\n",
+    "TPTN = 987\n",
+    "TPFPFNTN = 1000\n",
+    "print(TPTN / TPFPFNTN)\n",
+    "## it is a good model because it is almost 100% right every time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('Python-Filip-Jonsson-QrgXjHvV')",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +174,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3b159cfb29be9d6562cbbb625516b1508de6894b2216cc7812ffbc8c73a2987f"
+    "hash": "bf7a075d4e88d89235e152b5ba40ae2bd384c6fbf9c5ccafacee2ba85599004a"
    }
   }
  },
