will continue later with the other exercises

--- a/Exercises/00-Count-with-Python-exercise.ipynb
+++ b/Exercises/00-Count-with-Python-exercise.ipynb
@@ -147,10 +147,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate tuple (not \"float\") to tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\FJ11003\\Documents\\Github\\Python-Filip-Jonsson\\Exercises\\00-Count-with-Python-exercise.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/FJ11003/Documents/Github/Python-Filip-Jonsson/Exercises/00-Count-with-Python-exercise.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m M \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m,\u001b[39m75\u001b[39m \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\u001b[39m*\u001b[39m\u001b[39m1\u001b[39m\u001b[39m+\u001b[39m \u001b[39m0\u001b[39m,\u001b[39m25\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/FJ11003/Documents/Github/Python-Filip-Jonsson/Exercises/00-Count-with-Python-exercise.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m K \u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m\u001b[39m-\u001b[39m\u001b[39m4\u001b[39m)\u001b[39m/\u001b[39m(\u001b[39m0\u001b[39m\u001b[39m-\u001b[39m\u001b[39m4\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/FJ11003/Documents/Github/Python-Filip-Jonsson/Exercises/00-Count-with-Python-exercise.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mtuple\u001b[39m (M\u001b[39m+\u001b[39;49mK)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/FJ11003/Documents/Github/Python-Filip-Jonsson/Exercises/00-Count-with-Python-exercise.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m (K)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/FJ11003/Documents/Github/Python-Filip-Jonsson/Exercises/00-Count-with-Python-exercise.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m (M\u001b[39m+\u001b[39mK)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate tuple (not \"float\") to tuple"
+     ]
+    }
+   ],
+   "source": [
+    "A = (4,4)\n",
+    "B = (0,1)\n",
+    "M = 0,75 + 1/2*1+ 0,25\n",
+    "\n",
+    "K = (1-4)/(0-4)\n",
+    "\n",
+    "print (K)\n",
+    "print (M+K)\n"
+   ]
   }
  ],
  "metadata": {
